load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")
cc_library(
    name = "admin_server_library",
    hdrs = [
        "include/AdminServiceImpl.h",
        "include/AdminServerImpl.h",
        "include/ServerCall.h",
    ],
    srcs = [
        "AdminFacade.cpp",
        "AdminServerImpl.cpp",
        "AdminServiceImpl.cpp",
    ],
    strip_include_prefix = "//src/main/cpp/admin/include",
    deps = [
        "//api:rocketmq_interface",
        "//proto:rocketmq_grpc_library",
        "@com_github_gabime_spdlog//:spdlog",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "admin_client_interface",
    hdrs = [
        "include/AdminClient.h",
    ],
    strip_include_prefix = "//src/main/cpp/admin/include",
    deps = [
        "//api:rocketmq_interface",
    ],
)

cc_binary(
    name = "admin_client",
    srcs = [
        "AdminClient.cpp",
    ],
    deps = [
        ":admin_client_interface",
        "//proto:rocketmq_grpc_library",
    ],
)