#
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
# 
#     http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
load("@rules_cc//cc:defs.bzl", "cc_library")
package(default_visibility = ["//visibility:public"])

cc_library(
    name = "client_library",
    hdrs = glob(["include/*.h"]),
    srcs = glob(["*.cpp"]),
    strip_include_prefix = "//src/main/cpp/client/include",
    deps = [
        "//api:rocketmq_interface",
        "//proto:rocketmq_grpc_library",
        "//src/main/cpp/admin:admin_server_library",
        "//src/main/cpp/base:base_library",
        "//src/main/cpp/scheduler:scheduler_library",
        "//src/main/cpp/concurrent:countdown_latch_library",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_github_grpc_grpc//:grpc_secure",
        "@com_github_grpc_grpc//:grpc++",
        "@boringssl//:ssl",
        "//external:gtest",
    ],
    defines = [
    ],
)