load("@rules_cc//cc:defs.bzl", "cc_library")
cc_library(
    name = "countdown_latch_library",
    hdrs = [
        "include/CountdownLatch.h",
    ],
    srcs = [
        "CountdownLatch.cpp"
    ],
    strip_include_prefix = "//src/main/cpp/concurrent/include",
    deps = [
        "//src/main/cpp/base:base_library",
        "//src/main/cpp/log:log_library",
        "@com_google_absl//absl/base",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/synchronization",
    ],
    visibility = [
        "//visibility:public",
    ],
)