load("@rules_cc//cc:defs.bzl", "cc_library")
cc_library(
    name = "log_library",
    hdrs = glob(["include/*.h"]),
    srcs = glob(["*.cpp"]),
    strip_include_prefix = "//src/main/cpp/log/include",
    deps = [
        "//api:rocketmq_interface",
        "@com_github_gabime_spdlog//:spdlog",
        "@com_github_gulrak_filesystem//:filesystem",
    ],
    visibility = ["//visibility:public"],
)