load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "rocketmq_library",
    hdrs = glob(["include/*.h"]),
    srcs = glob(["*.cpp"]),
    strip_include_prefix = "//src/main/cpp/rocketmq/include",
    deps = [
        "//src/main/cpp/client:client_library",
        "//src/main/cpp/tracing/exporters:otlp_exporter",
        "//src/main/cpp/log:log_library",
        "//src/main/cpp/admin:admin_server_library",
        "@com_google_absl//absl/types:optional",
    ],
)