add_library(rocketmq_obj OBJECT)
target_sources(rocketmq_obj
        PRIVATE
            AsyncReceiveMessageCallback.cpp
            SendCallbacks.cpp
            AwaitPullCallback.cpp
            ClientImpl.cpp
            ConsumeMessageService.cpp
            ConsumeStandardMessageService.cpp
            ConsumeFifoMessageService.cpp
            CredentialsProvider.cpp
            DefaultMQProducer.cpp
            ProducerImpl.cpp
            DefaultMQPushConsumer.cpp
            PushConsumerImpl.cpp
            DefaultMQPullConsumer.cpp
            PullConsumerImpl.cpp
            FilterExpression.cpp
            MessageGroupQueueSelector.cpp
            ProcessQueueImpl.cpp
            TransactionImpl.cpp)
target_include_directories(rocketmq_obj
        PUBLIC
            ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(rocketmq_obj
        PUBLIC
            client_library
            logger_library
            thread_pool)

add_library(rocketmq_library
        STATIC
            $<TARGET_OBJECTS:rocketmq_obj>)
target_include_directories(rocketmq_library
        PUBLIC
            ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(rocketmq_library
        PUBLIC
            client_library
            logger_library)

add_subdirectory(mocks)