load("@rules_cc//cc:defs.bzl", "cc_library")
cc_library(
    name = "scheduler_library",
    hdrs = glob(["include/*.h"]),
    srcs = glob(["*.cpp"]),
    strip_include_prefix = "//src/main/cpp/scheduler/include",
    deps = [
        "//api:rocketmq_interface",
        "//src/main/cpp/log:log_library",
        "@com_google_absl//absl/base",        
        "@com_google_absl//absl/synchronization",
        "@com_google_absl//absl/container:flat_hash_map",
        "@asio//:asio",
    ],
    visibility = ["//visibility:public"],
)